# CoD_dice_roller

./: .gitignore  Cargo.toml  README.md  example_characters.json  ideas.md  log4rs.example.yml
src/: main.rs
src/commands/: character.rs  health.rs  help.rs  merit.rs  mod.rs  roll.rs  stats.rs
src/util/: characters.rs  constants.rs  mod.rs
