[package]
name = "cod_dice_roller"
version = "0.1.0"
authors = ["Celeo <celeodor@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
kankyo = "0.2.0"
lazy_static = "1.3.0"
log = "0.4.6"
log4rs = "0.8.3"
prettytable-rs = "0.8.0"
rand = "0.6.5"
regex = "1.1.7"
serde = "1.0.92"
serde_json = "1.0.39"
serenity = "0.6.0-rc.2"

[dev-dependencies]
tempdir = "0.3.7"
